# book-tool

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Der_Pfad_der_Winde_Band_2.mobi  Der_Weg_der_Koenige_Band_1.mobi  FINAL_TEST_REPORT_ISSUE_19.md  ISSUE_23_FINAL_TEST_REPORT.md  ISSUE_46_COMPREHENSIVE_TEST_REPORT.md  LICENSE  MANIFEST.in  PR_PREPARATION.md  PR_REVIEW_FEEDBACK.md  README.md  TEST_REPORT_ISSUE_18.md  advanced_calibre_control.py  auto_download_books.py  book_automation_master.sh  calibre_asin_automation.py  calibre_control_demo.py  calibre_controller.py  calibre_database_control.py  calibre_goodreads_prep.py  enhanced_asin_lookup.py  enhanced_automation_workflow.sh  issue55_test_report.md  localization_metadata_extractor.py  localization_test_report_20250907_230053.txt  localization_test_report_20250907_230458.txt  localization_test_report_20250908_072318.txt  localization_test_report_20250908_073330.txt  localization_test_report_20250912_040714.txt  localization_test_report_20250912_040838.txt  localization_test_report_20250912_041711.txt  parallel_kfx_converter.py  pyproject.toml  requirements-dev.txt  requirements.txt  (+16 more)
.github/workflows/: publish.yml  test.yml
scratchpads/: review-PR-44.md  review-PR-57.md  review-PR-61.md
scratchpads/active/: 2025-09-05_fix-kfx-config-manager-interface.md  2025-09-06_issue4-final-validation-testing.md  2025-09-07_cli-foundation-merge-preparation.md  2025-09-07_final-review-report-issue-18-19.md  2025-09-07_implement-book-download-integration.md  2025-09-07_implement-core-conversion-functionality.md  2025-09-07_issue-17-file-validation-implementation.md  2025-09-07_issue-18-fix-asin-lookup-api-failure.md  2025-09-07_issue-19-localization-asin-lookup.md  2025-09-07_merge-pr14-pip-installable-cli.md  2025-09-07_pip-installable-cli-package.md  2025-09-07_pr13-code-review-improvements.md  2025-09-07_pr21-review-asin-lookup-fix.md  2025-09-07_pr26-review-asin-lookup-performance.md  2025-09-08_complete-asin-lookup-pr.md  2025-09-08_integration-testing-merge-preparation.md  2025-09-08_issue-17-file-validation-corrupted-ebooks.md  2025-09-08_issue-22-code-quality-linting-fixes.md  2025-09-08_issue-23-language-support-expansion.md  2025-09-08_issue-31-fix-f541-fstring-placeholders.md  2025-09-08_issue-34-unit-test-cache-manager-fix.md  2025-09-08_issue-34-unit-test-cache-manager-import-fix.md  2025-09-08_issue-38-fix-failing-asin-lookup-tests.md  2025-09-08_issue-39-fix-availability-check-test-failures.md  2025-09-08_issue-39-fix-availability-check-tests.md  2025-09-08_pr-review-40.md  2025-09-08_pr29-review-code-quality-linting.md  2025-09-08_pr35-code-review-cache-manager-fix.md  2025-09-08_pr44-finalization-merge-plan.md  2025-09-09_current-state-analysis-and-merge-strategy.md  2025-09-09_issue-49-parameterize-book-pipeline-path.md  2025-09-09_issue-55-improve-asin-lookup-success-rate.md  2025-09-09_issue-65-comprehensive-test-failure-fixes.md  2025-09-09_issue-66-fix-asin-lookup-close-method.md  2025-09-09_pr51-comprehensive-review.md  2025-09-11_comprehensive-project-analysis-and-merge-strategy.md  2025-09-11_issue-46-parameterize-book-pipeline-path.md  2025-09-11_issue-77-fix-enhanced-asin-lookup-module-integration.md  2025-09-11_issue-78-book-metadata-extraction-improvement.md  2025-09-11_issue-78-metadata-extraction-critical-fix.md  (+10 more)
scratchpads/completed/: 2025-09-05_calibre-cli-tool-transformation.md  2025-09-05_fix-kfx-config-manager-interface.md  2025-09-06_asin-lookup-implementation.md  2025-09-06_issue4-final-validation-testing.md  2025-09-06_kfx-plugin-documentation.md  2025-09-07_calibre-database-integration-implementation.md  2025-09-07_cli-foundation-merge-preparation.md  2025-09-07_implement-book-download-integration.md  2025-09-07_implement-core-conversion-functionality.md  2025-09-07_issue-17-file-validation-implementation.md  2025-09-07_issue-18-fix-asin-lookup-api-failure.md  2025-09-07_issue-24-asin-lookup-performance-optimization.md  2025-09-07_merge-pr14-pip-installable-cli.md  2025-09-07_merge-pr21-asin-lookup-fix.md  2025-09-07_pip-installable-cli-package.md  2025-09-07_pr21-review-asin-lookup-fix.md  2025-09-08_comprehensive-pr-review-session.md  2025-09-08_final-implementation-test-merge-issue-18.md  2025-09-08_integration-testing-merge-preparation.md  2025-09-08_issue-17-file-validation-corrupted-ebooks.md  2025-09-08_issue-22-code-quality-linting-fixes.md  2025-09-08_issue-23-language-support-expansion.md  2025-09-08_issue-31-fix-f541-fstring-placeholders.md  2025-09-08_issue-32-whitespace-cleanup.md  2025-09-08_issue-34-unit-test-cache-manager-import-fix.md  2025-09-08_issue-37-fix-sqlite-cache-manager-unit-tests.md  2025-09-08_issue-38-fix-failing-asin-lookup-tests.md  2025-09-08_pr26-review-performance-optimization.md  2025-09-08_pr28-review-file-validation.md  2025-09-08_pr29-review-code-quality-linting.md  2025-09-08_pr36-code-review-whitespace-cleanup.md  2025-09-08_pr41-review-asin-lookup-fix.md  2025-09-08_pr44-finalization-merge-plan.md  2025-09-08_review-PR-40-sqlite-cache-test-fixes.md  2025-09-08_review-PR-42-f541-fstring-fixes.md  2025-09-09_branch-fix-issue-18-analysis-and-merge-plan.md  2025-09-09_issue-49-parameterize-book-pipeline-path.md  2025-09-09_issue-54-fix-file-validation-test-failures.md  2025-09-09_issue-60-fix-docx-office-format-detection.md  2025-09-09_pr51-comprehensive-testing-results.md  (+18 more)
scripts/: install.sh  setup-dev.sh
src/calibre_books/: __init__.py
tests/: __init__.py  test_utils_test_helpers.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_asin_cli.py  test_asin_issue18_integration.py  test_download_cli.py  test_format_conversion_cli.py  test_kfx_conversion_cli.py  test_kfx_documentation_integration.py
tests/manual/: test_issue18_real_world.py  test_kfx_performance_validation.py  test_kfx_real_world_pipeline.py
tests/unit/: __init__.py  test_asin_lookup.py  test_asin_lookup_issue18.py  test_book.py  test_calibre_integration.py  test_cli.py  test_cli_module_structure.py  test_config.py  (+8 more)
(+34 files in other folders)
